Added BloodRequestRoutes.kt Made this ready for Docker Container

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,10 @@ out/
 ### VS Code ###
 .vscode/
 
-/src/main/kotlin/util/MongoConstant.kt
+/src/main/kotlin/util/SecretConstant.kt
+/src/main/resources/firebase_service_account_key.json
+
+
 
 .env
 /.env
