--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,11 +5,16 @@ ktor-version = "3.0.3"
 logback-version = "1.4.14"
 mongo-version = "4.10.2"
 
+firebse-admin = "9.4.3"
+
 [libraries]
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor-version" }
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor-version" }
 ktor-status-pages = {module ="io.ktor:ktor-server-status-pages", version.ref="ktor-version"}
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor-version" }
+ktor-server-auth = {module = "io.ktor:ktor-server-auth", version.ref="ktor-version"}
+ktor-server-auth-jwt = {module = "io.ktor:ktor-server-auth-jwt", version.ref="ktor-version"}
+
 mongodb-driver-core = { module = "org.mongodb:mongodb-driver-core", version.ref = "mongo-version" }
 mongodb-driver-sync = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongo-version" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-version" }
@@ -19,6 +24,8 @@ ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor-
 ktor-server-config-yaml = { module = "io.ktor:ktor-server-config-yaml", version.ref = "ktor-version" }
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor-version" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin-version" }
+
+firebase-admin = {module = "com.google.firebase:firebase-admin", version.ref="firebse-admin"}
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
