--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,11 @@
 ktor:
+    development: true
     application:
         modules:
             - com.api.hazrat.ApplicationKt.module
     deployment:
-        port: 8080
-        host : 0.0.0.0
+        watch:
+            - classes
+            - resources
+        port: 9091
+        host : "0.0.0.0"
