--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ ktor-status-pages = {module ="io.ktor:ktor-server-status-pages", version.ref="kt
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor-version" }
 ktor-server-auth = {module = "io.ktor:ktor-server-auth", version.ref="ktor-version"}
 ktor-server-auth-jwt = {module = "io.ktor:ktor-server-auth-jwt", version.ref="ktor-version"}
+ktor-server-html-builder = {module = "io.ktor:ktor-server-html-builder", version.ref="ktor-version"}
 
 mongodb-driver-core = { module = "org.mongodb:mongodb-driver-core", version.ref = "mongo-version" }
 mongodb-driver-sync = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongo-version" }
