--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,9 @@ ktor:
             - com.api.hazrat.ApplicationKt.module
     deployment:
         port: 8080
+
+websocket:
+  channel_capacity: 1000
+  stale_timeout: 300000 # 5 minutes in milliseconds
+  health_check_interval: 30000 # 30 seconds in milliseconds
+  metrics_log_interval: 60000 # 1 minute in milliseconds
