--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ out/
 ### VS Code ###
 .vscode/
 
-/src/main/kotlin/util/SecretConstant.kt
 /src/main/resources/firebase_service_account_key.json
+.env
