--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,12 @@ ktor = "3.3.1"
 logback = "1.4.14"
 kotlinx-coroutines-core="1.7.3"
 mongo-version = "4.10.2"
+dotenv = "6.4.1"
 
 firebse-admin = "9.4.3"
 
 [libraries]
+dotenv-kotlin = { module = "io.github.cdimascio:dotenv-kotlin", version.ref = "dotenv" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-status-pages = {module ="io.ktor:ktor-server-status-pages", version.ref="ktor"}
